--- a/extension/content/content.css
+++ b/extension/content/content.css
@@ -58,18 +58,17 @@ html[data-hns-remove-hidden-jobs="true"]
 }
 
 .hns-blocked-job {
+  align-content: space-evenly !important;
+  align-items: center !important;
   backdrop-filter: blur(10px) !important;
   background: hsl(0, 0%, 50%, 0.75) !important;
-  justify-content: center !important;
-
-  align-content: space-evenly !important;
-
   border-bottom: 1px solid #000000 !important;
   border-top: 1px solid #000000 !important;
   box-sizing: border-box !important;
-
+  flex-direction: row !important;
+  flex-wrap: nowrap !important;
+  justify-content: space-evenly !important;
   overflow-x: auto !important;
-  flex-direction: column !important;
 }
 
 .hns-container:has([data-hns-blocked-attribute]) .hns-blocked-job {
@@ -144,16 +143,14 @@ html[data-hns-remove-hidden-jobs="true"]
   cursor: pointer !important;
   display: flex !important;
   flex-direction: column !important;
-  /* height: 67px !important; */
   height: 67px !important;
   justify-content: center !important;
   margin: 10px !important;
-  min-width: 64px !important;
+  min-width: max-content !important;
   padding: 0 20px !important;
   position: relative !important;
   transition: background-color 200ms ease-out, color 100ms ease-out !important;
   user-select: none !important;
-  width: max-content !important;
 }
 
 .hns-block-attribute-toggle {
@@ -213,33 +210,33 @@ html[data-hns-remove-hidden-jobs="true"]
 }
 
 .hns-block-attribute-toggle[data-hns-attribute="keyword"] {
-  border: 1px hsl(120, 50%, 80%, 1) solid !important;
+  border: 1px hsl(150, 50%, 80%, 1) solid !important;
 }
 
 .hns-block-attribute-toggle[data-hns-attribute="keyword"] {
-  background: hsl(120, 50%, 80%, 0) !important;
-  color: hsl(120, 50%, 80%, 1) !important;
+  background: hsl(150, 50%, 80%, 0) !important;
+  color: hsl(150, 50%, 80%, 1) !important;
 }
 
 .hns-block-attribute-toggle[data-hns-attribute="keyword"]:hover {
-  background: hsl(120, 50%, 80%, 0.2) !important;
+  background: hsl(150, 50%, 80%, 0.2) !important;
 }
 
 .hns-block-attribute-toggle[data-hns-attribute="keyword"]:active {
-  background: hsl(120, 50%, 80%, 0.3) !important;
+  background: hsl(150, 50%, 80%, 0.3) !important;
 }
 
 .hns-block-attribute-toggle[data-hns-blocked-attribute][data-hns-attribute="keyword"] {
-  background: hsl(120, 50%, 80%, 1) !important;
+  background: hsl(150, 50%, 80%, 1) !important;
   color: hsl(0, 0%, 0%) !important;
 }
 
 .hns-block-attribute-toggle[data-hns-blocked-attribute][data-hns-attribute="keyword"]:hover {
-  background: hsl(120, 50%, 80%, 0.8) !important;
+  background: hsl(150, 50%, 80%, 0.8) !important;
 }
 
 .hns-block-attribute-toggle[data-hns-blocked-attribute][data-hns-attribute="keyword"]:active {
-  background: hsl(120, 50%, 80%, 0.7) !important;
+  background: hsl(150, 50%, 80%, 0.7) !important;
 }
 
 .hns-block-attribute-toggle-attribute {
