--- a/extension/runtime/popup/popup.css
+++ b/extension/runtime/popup/popup.css
@@ -1,9 +1,27 @@
 @font-face {
+  font-display: swap;
+  font-family: "Schoolbell";
+  font-style: normal;
+  font-weight: 400;
+  src: url(/assets/fonts/Schoolbell-Regular.ttf) format("TrueType");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Fredoka-Bold";
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+  font-weight: 700;
+  src: url(/assets/fonts/Fredoka-Bold.ttf) format("TrueType");
+}
+
+@font-face {
+  font-display: swap;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 400;
   font-stretch: 100%;
-  font-display: swap;
   src: url(/assets/fonts/open-sans-wght-400.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
@@ -11,11 +29,11 @@
 }
 
 @font-face {
+  font-display: swap;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 700;
   font-stretch: 100%;
-  font-display: swap;
   src: url(/assets/fonts/open-sans-wght-700.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
     U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215,
@@ -32,15 +50,15 @@ html {
   width: var(--document-width);
 }
 
-html[data-tab-is-job-board="true"] {
+html[data-job-board-id] {
   height: 37.5rem;
 }
 
-html[data-tab-is-job-board="false"] {
-  height: 14rem;
+html:not([data-job-board-id]) {
+  height: 13rem;
 }
 
-html[data-tab-is-job-board="false"]:has(#settings-container:not(.invisible)) {
+html:has(#settings-container:not(#settings-container.invisible)) {
   height: 37.5rem;
 }
 
@@ -63,7 +81,7 @@ main {
   border-radius: 1rem;
   display: grid;
   gap: 1rem;
-  grid-template-rows: 48px 1fr;
+  grid-template-rows: 2rem 1fr;
   height: calc(100% - 2rem);
   padding: var(--main-padding);
 }
@@ -71,47 +89,26 @@ main {
 header {
   align-items: center;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1.5rem 1fr 1.5rem;
   width: 100%;
 }
 
-.brand-container {
-  background: hsl(39, 77%, 83%);
-  display: flex;
-  gap: 1rem;
-  grid-column: 1 / 3;
-  grid-row: 1;
-  height: 3rem;
-  place-content: center;
-  place-items: center;
-  width: 100%;
-  z-index: 1;
-}
-
-.brand-container > h1 {
-  line-height: 1;
-  margin-top: 4px;
-}
-
-.brand-container > img {
-  height: 100%;
+html:not([data-job-board-id]) footer {
+  display: none;
 }
 
 .hide-n-seek-title {
   color: hsl(0, 0%, 0%);
-  font-size: 1.25rem;
-  font-weight: 700;
-  margin: 0;
+  font: 1.55rem "Fredoka-Bold";
+  line-height: 1;
+  margin: 4px 0 0 0;
   text-align: center;
 }
 
 #settings-toggle {
   aspect-ratio: 1;
-  /* background: hsl(0, 0%, 100%, 0.3); */
   border-radius: 50%;
   fill: hsl(0, 0%, 0%);
-  grid-column: 2 / 3;
-  grid-row: 1;
   height: 1.75rem;
   justify-self: end;
   margin-top: 4px;
@@ -145,15 +142,18 @@ main:has(.warning) #settings-toggle::after {
   background: hsl(0, 0%, 100%, 0.6);
 }
 
-main:has(#settings-container:not(.invisible)) #settings-toggle {
+main:has(#settings-container:not(#settings-container.invisible))
+  #settings-toggle {
   background: hsl(0, 0%, 100%, 0.6);
 }
 
-main:has(#settings-container:not(.invisible)) #settings-toggle:hover {
+main:has(#settings-container:not(#settings-container.invisible))
+  #settings-toggle:hover {
   background: hsl(0, 0%, 100%, 0.5);
 }
 
-main:has(#settings-container:not(.invisible)) #settings-toggle:active {
+main:has(#settings-container:not(#settings-container.invisible))
+  #settings-toggle:active {
   background: hsl(0, 0%, 100%, 0.3);
 }
 
@@ -165,11 +165,15 @@ main:has(#settings-container:not(.invisible)) #settings-toggle:active {
   transform: rotate(15deg);
 }
 
-main:has(#settings-container:not(.invisible)) #settings-toggle svg {
+main:has(#settings-container:not(#settings-container.invisible))
+  #settings-toggle
+  svg {
   transform: rotate(180deg);
 }
 
-main:has(#settings-container:not(.invisible)) #settings-toggle:hover svg {
+main:has(#settings-container:not(#settings-container.invisible))
+  #settings-toggle:hover
+  svg {
   transform: rotate(165deg);
 }
 
@@ -205,8 +209,8 @@ main:has(#settings-container:not(.invisible)) #settings-toggle:hover svg {
   width: calc(100% - 2rem);
 }
 
-html[data-tab-is-job-board="true"] .options-for-job-board,
-html[data-tab-is-job-board="false"] .options-for-job-search {
+html[data-job-board-id] .options-for-job-board,
+html:not([data-job-board-id]) .options-for-job-search {
   display: flex;
 }
 
@@ -278,8 +282,10 @@ html[data-tab-is-job-board="false"] .options-for-job-search {
 }
 
 .options-for-job-board .job-board-name {
-  max-height: 32.4219px;
-  width: 50%;
+  border-radius: calc(1px / 0);
+  margin-top: -1.5rem;
+  max-height: 0.8rem;
+  padding: 0.4rem 0.8rem;
 }
 
 .job-name-search-container {
@@ -348,15 +354,17 @@ html[data-tab-is-job-board="false"] .options-for-job-search {
   flex-direction: column;
   flex-grow: 1;
   gap: 1rem;
+  margin-top: -0.5rem;
   width: 100%;
 }
 
 .hidden-jobs-list-container {
-  align-content: center;
+  align-content: start;
   background: hsl(0, 0%, 100%, 0.1);
   border-radius: 1rem;
   display: grid;
   flex: 1 0 121px;
+  grid-template-rows: auto 1fr;
   overflow: hidden;
   position: relative;
   transition: background-color 200ms ease-out;
@@ -383,7 +391,7 @@ html[data-tab-is-job-board="false"] .options-for-job-search {
   pointer-events: none;
   position: absolute;
   text-align: center;
-  top: calc(50% - var(--height) * 0.5 - var(--padding));
+  top: calc(50% - var(--height) * 0.5 - var(--padding) + 1rem);
   width: var(--width);
 }
 
@@ -393,11 +401,11 @@ html[data-tab-is-job-board="false"] .options-for-job-search {
 }
 
 .hidden-jobs-list {
+  align-content: start;
   display: grid;
   gap: 0.5rem;
   grid-auto-flow: row;
   justify-items: center;
-  min-height: 121px;
   overflow-y: auto;
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
@@ -446,27 +454,15 @@ html[data-tab-is-job-board="false"] .options-for-job-search {
 }
 
 .hidden-job-button[data-job-attribute="keyword"] {
-  background: hsl(120, 100%, 50%, 0.3);
+  background: hsl(150, 100%, 90%, 0.5);
 }
 
 .hidden-job-button[data-job-attribute="keyword"]:hover {
-  background: hsl(120, 100%, 50%, 0.5);
+  background: hsl(150, 100%, 90%, 0.7);
 }
 
 .hidden-job-button[data-job-attribute="keyword"]:active {
-  background: hsl(120, 100%, 50%, 0.6);
-}
-
-.hidden-job-button:first-child {
-  align-self: end;
-}
-
-.hidden-job-button:last-child {
-  align-self: start;
-}
-
-.hidden-job-button:only-child {
-  align-self: center;
+  background: hsl(150, 100%, 90%, 0.8);
 }
 
 .hidden-job-button.remove {
@@ -514,6 +510,140 @@ html[data-tab-is-job-board="false"] .options-for-job-search {
   grid-template-columns: 2fr 1fr;
 }
 
+.feed-charm-button {
+  background: hsl(48, 99%, 64%);
+  box-shadow: 0px 2px 2px 1px hsl(0, 0%, 0%, 0.6),
+    inset 0px 2px 2px 1px hsl(60, 100%, 80%, 0.7);
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: 1fr auto auto auto;
+  height: 40px;
+  padding: 0 2rem;
+  position: relative;
+  width: 100%;
+}
+
+.feed-charm-text {
+  font: 1.1rem "Schoolbell";
+  position: absolute;
+  transform: translate(-23px, -6px);
+}
+
+.feed-charm-bowl {
+  --scale: 0.3;
+  --translateX: -28px;
+  --translateY: 11px;
+  position: absolute;
+  filter: hue-rotate(180deg) brightness(2.5);
+  transform: translate(var(--translateX), var(--translateY)) scale(var(--scale));
+}
+
+.feed-charm-face {
+  position: absolute;
+  transform: translate(66px, 1px) scale(0.7);
+}
+
+.feed-charm-heart {
+  position: absolute;
+}
+
+.feed-charm-heart.left-heart {
+  --brightness: 2;
+  --hue-rotate: -45deg;
+  --rotateY: -180deg;
+  --scale: 0.25;
+  --translateX: 35px;
+  --translateY: 15px;
+  --multiplier: 0.9;
+  filter: brightness(var(--brightness)) hue-rotate(var(--hue-rotate));
+  transform: translate(var(--translateX), var(--translateY))
+    rotateY(var(--rotateY)) rotate(0deg) scale(var(--scale));
+}
+
+.feed-charm-heart.right-heart {
+  --brightness: 1.4;
+  --hue-rotate: 0deg;
+  --rotateY: 20deg;
+  --scale: 0.4;
+  --translateX: 100px;
+  --translateY: -13px;
+  --multiplier: 1.2;
+  filter: brightness(var(--brightness)) hue-rotate(var(--hue-rotate));
+  transform: translate(var(--translateX), var(--translateY))
+    rotateY(var(--rotateY)) rotate(0deg) scale(var(--scale));
+}
+
+.feed-charm-button:hover .feed-charm-heart.left-heart {
+  animation: 800ms heartbeat normal ease-out infinite;
+}
+
+.feed-charm-button:hover .feed-charm-heart.right-heart {
+  animation: 1800ms heartbeat normal ease-out infinite;
+}
+
+@keyframes heartbeat {
+  0% {
+    filter: brightness(var(--brightness)) hue-rotate(var(--hue-rotate));
+    transform: translate(var(--translateX), var(--translateY))
+      rotateY(var(--rotateY)) rotate(0deg) scale(var(--scale));
+  }
+  25% {
+    filter: brightness(calc(var(--multiplier) * var(--brightness)))
+      hue-rotate(calc(var(--multiplier) * var(--hue-rotate)));
+    transform: translate(var(--translateX), var(--translateY))
+      rotateY(var(--rotateY)) rotate(calc(var(--multiplier) * -25deg))
+      scale(calc(1.5 * var(--multiplier) * var(--scale)));
+  }
+  50% {
+    filter: brightness(var(--brightness)) hue-rotate(var(--hue-rotate));
+    transform: translate(var(--translateX), var(--translateY))
+      rotateY(var(--rotateY)) rotate(0deg) scale(var(--scale));
+  }
+  75% {
+    filter: brightness(calc(var(--multiplier) * var(--brightness)))
+      hue-rotate(calc(var(--multiplier) * var(--hue-rotate)));
+    transform: translate(var(--translateX), var(--translateY))
+      rotateY(var(--rotateY)) rotate(calc(var(--multiplier) * 25deg))
+      scale(calc(1.5 * var(--multiplier) * var(--scale)));
+  }
+  100% {
+    filter: brightness(var(--brightness)) hue-rotate(var(--hue-rotate));
+    transform: translate(var(--translateX), var(--translateY))
+      rotateY(var(--rotateY)) rotate(0deg) scale(var(--scale));
+  }
+}
+
+.feed-charm-button:hover .feed-charm-bowl {
+  animation: bowl-rattle 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes bowl-rattle {
+  0% {
+    transform: translate(var(--translateX), var(--translateY)) rotate(0deg)
+      scale(var(--scale));
+  }
+  20% {
+    transform: translate(calc(var(--translateX) - 2px), var(--translateY))
+      rotate(-3deg) scale(var(--scale));
+  }
+  40% {
+    transform: translate(calc(var(--translateX) + 2px), var(--translateY))
+      rotate(3deg) scale(var(--scale));
+  }
+  60% {
+    transform: translate(calc(var(--translateX) - 1px), var(--translateY))
+      rotate(-2deg) scale(var(--scale));
+  }
+  80% {
+    transform: translate(calc(var(--translateX) + 1px), var(--translateY))
+      rotate(2deg) scale(var(--scale));
+  }
+  100% {
+    transform: translate(var(--translateX), var(--translateY)) rotate(0deg)
+      scale(var(--scale));
+  }
+}
+
 button {
   background: transparent;
   border: none;
@@ -538,7 +668,7 @@ button {
 .text-button {
   border: none;
   color: hsl(0, 0%, 100%);
-  height: 50px;
+  height: 40px;
   transition: 200ms ease-out;
   transition-property: background-color, opacity;
 }
@@ -587,7 +717,7 @@ button {
   font-size: calc(40px / 3);
   gap: 1rem;
   grid-auto-flow: column;
-  height: 50px;
+  height: 40px;
   justify-content: center;
   transition: 200ms ease-out;
   transition-property: background-color, color;
@@ -658,6 +788,24 @@ input[type="text"]:disabled {
   opacity: 1;
 }
 
+.add-keyword-container {
+  background: hsl(0, 0%, 100%, 0.1);
+  box-shadow: 0 5px 10px 0px hsl(0, 0%, 0%, 0.05),
+    0 1px 2px 1px hsl(0, 0%, 0%, 0.05);
+  display: grid;
+  grid-template-columns: 1fr auto;
+  place-items: center;
+  width: 100%;
+  z-index: 1;
+}
+
+input[name="add-keyword"] {
+  border: 0;
+  border-radius: 0.5rem;
+  margin: 0.5rem auto;
+  width: calc(100% - 1rem);
+}
+
 ::-webkit-scrollbar {
   width: var(--scrollbar-width);
 }
@@ -708,6 +856,7 @@ body::-webkit-scrollbar-thumb:hover {
   overflow: auto;
   padding: 1rem;
   width: calc(100% - 2rem);
+  z-index: 2;
 }
 
 #settings-container.invisible {
