Add origin permission handling (1) Content script permissions are now handled by permissions.js instead of being required permissions in manifest.json

--- a/extension/runtime/popup/popup.css
+++ b/extension/runtime/popup/popup.css
@@ -214,6 +214,23 @@ html:not([data-job-board-id]) .options-for-job-search {
   display: flex;
 }
 
+#request-permissions {
+  display: none;
+}
+
+#request-permissions[data-permissions-needed] {
+  display: block;
+}
+
+html:has(#request-permissions[data-permissions-needed])
+  .options-for-job-search {
+  display: none;
+}
+
+html:has(#request-permissions[data-permissions-needed]) {
+  height: 8.5rem;
+}
+
 .job-board-search-options-container {
   align-items: center;
   display: grid;
