--- a/extension/content/content.css
+++ b/extension/content/content.css
@@ -50,11 +50,9 @@ html[data-hns-remove-hidden-jobs="true"]
   height: 100% !important;
   justify-content: center !important;
   left: 0 !important;
-  opacity: 0 !important;
   position: absolute !important;
   top: 0 !important;
   width: 100% !important;
-  z-index: 1 !important;
 }
 
 .hns-blocked-job {
@@ -65,10 +63,15 @@ html[data-hns-remove-hidden-jobs="true"]
   border-bottom: 1px solid #000000 !important;
   border-top: 1px solid #000000 !important;
   box-sizing: border-box !important;
+  cursor: default !important;
   flex-direction: row !important;
   flex-wrap: nowrap !important;
   justify-content: space-evenly !important;
+  opacity: 0 !important;
   overflow-x: auto !important;
+  pointer-events: none !important;
+  transition: opacity 200ms ease-out 200ms !important;
+  z-index: 1 !important;
 }
 
 .hns-container:has([data-hns-blocked-attribute]) .hns-blocked-job {
@@ -79,17 +82,14 @@ html[data-hns-remove-hidden-jobs="true"]
   z-index: 2 !important;
 }
 
-.hns-blocked-job {
-  opacity: 0 !important;
-  pointer-events: none !important;
-  transition: opacity 200ms ease-out 200ms !important;
-  z-index: 1 !important;
-}
-
 .hns-unblocked-job {
   backdrop-filter: blur(0) !important;
   background: hsl(0, 0%, 50%, 0) !important;
   justify-content: end !important;
+  opacity: 1 !important;
+  pointer-events: none !important;
+  transition: opacity 200ms ease-out 200ms !important;
+  z-index: 2 !important;
 }
 
 .hns-container:has([data-hns-blocked-attribute]) .hns-unblocked-job {
@@ -97,13 +97,6 @@ html[data-hns-remove-hidden-jobs="true"]
   pointer-events: auto !important;
   transition: opacity 200ms ease-out !important;
   z-index: 1 !important;
-}
-
-.hns-unblocked-job {
-  opacity: 1 !important;
-  pointer-events: none !important;
-  transition: opacity 200ms ease-out 200ms !important;
-  z-index: 2 !important;
 }
 
 .hns-block-button {
